--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -689,7 +689,7 @@ gg_ek_standard$diagram_lagekstandard_bakgrund_Dalarna
 ```
 <br>
 
-Vid analyser av sysselsättning så är det av stor vikt att också analysera gruppen som inte förvärvsarbetar. Det är ur samhällets perspektiv stor skillnad på om man har sin försörjning från ekonomiskt stöd eller studiemedel. Det senare är en form av investering som vanligtvis leder till högre inkomster för individen framöver, medan det förra är en utväg för individer som inte har kunnat lösa sin försörjning på annat sätt. Just ekonomiskt stöd är den kategori där det finns störst skillnader mellan grupperna med svensk och utländsk bakgrund, där närmare 16 procent av de med utländsk bakgrund har sin största inkomstkälla från ekonomiskt stöd mot drygt en procent av de med svensk bakgrund. Med ekonomiskt stöd åsyftas ekonomiskt bistånd för sökande och eventuell medsökande, bostadsbidrag för sökande och eventuell medsökande samt äldreförsörjningsstöd.
+Vid analyser av sysselsättning så är det av stor vikt att också analysera gruppen som inte förvärvsarbetar. Det är ur samhällets perspektiv stor skillnad på om man har sin försörjning från ekonomiskt stöd eller studiemedel. Det senare är en form av investering som vanligtvis leder till högre inkomster för individen framöver, medan det förra är en utväg för individer som inte har kunnat lösa sin försörjning på annat sätt. Just ekonomiskt stöd är den kategori där det finns störst skillnader mellan grupperna med svensk och utländsk bakgrund, där ungefär `r ek_stod_utrikes_andel` procent av de med utländsk bakgrund har sin största inkomstkälla från ekonomiskt stöd mot drygt `r ek_stod_inrikes_andel` procent av de med svensk bakgrund. Med ekonomiskt stöd åsyftas ekonomiskt bistånd för sökande och eventuell medsökande, bostadsbidrag för sökande och eventuell medsökande samt äldreförsörjningsstöd.
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 gg_huv_inkomst$huvud_ink_bakgrund_Dalarna
